exports[`prefer-todo > invalid(1): import test from 'node:test';\ntest({name: 't', fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 't', fn() {}});

`;

exports[`prefer-todo > invalid(1): import test from 'node:test';\ntest({name: 't', fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 't', fn() {}});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import test from 'node:test';
  2 | test.todo({name: 't', fn() {}});

`;

exports[`prefer-todo > invalid(10): import test from 'node:test';\ntest('placeholder', () => {\n  // keep me\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('placeholder', () => {
  3 |   // keep me
  4 | });

`;

exports[`prefer-todo > invalid(10): import test from 'node:test';\ntest('placeholder', () => {\n  // keep me\n}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('placeholder', () => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 |   // keep me
    | ^^^^^^^^^^^^
> 4 | });
    | ^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

`;

exports[`prefer-todo > invalid(11): import {test} from 'node:test';\ntest(\"x\"); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x");

`;

exports[`prefer-todo > invalid(11): import {test} from 'node:test';\ntest(\"x\"); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x");
    | ^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {test} from 'node:test';
  2 | test.todo("x");

`;

exports[`prefer-todo > invalid(12): import {test} from 'node:test';\ntest(\"x\", () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x", () => {});

`;

exports[`prefer-todo > invalid(12): import {test} from 'node:test';\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {test} from 'node:test';
  2 | test.todo("x");

`;

exports[`prefer-todo > invalid(13): import {test} from 'node:test';\ntest(\"x\", function () {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x", function () {});

`;

exports[`prefer-todo > invalid(13): import {test} from 'node:test';\ntest(\"x\", function () {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x", function () {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {test} from 'node:test';
  2 | test.todo("x");

`;

exports[`prefer-todo > invalid(14): import {test} from 'node:test';\ntest(\"x\", async () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x", async () => {});

`;

exports[`prefer-todo > invalid(14): import {test} from 'node:test';\ntest(\"x\", async () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x", async () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {test} from 'node:test';
  2 | test.todo("x");

`;

exports[`prefer-todo > invalid(15): import {it} from 'node:test';\nit(\"x\", () => {}); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("x", () => {});

`;

exports[`prefer-todo > invalid(15): import {it} from 'node:test';\nit(\"x\", () => {}); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("x", () => {});
    | ^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {it} from 'node:test';
  2 | it.todo("x");

`;

exports[`prefer-todo > invalid(16): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", () => {});

`;

exports[`prefer-todo > invalid(16): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.todo("x");

`;

exports[`prefer-todo > invalid(17): import {test} from 'node:test';\ntest(\"x\", () => {\n\t// TODO: write this\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x", () => {
  3 | 	// TODO: write this
  4 | });

`;

exports[`prefer-todo > invalid(17): import {test} from 'node:test';\ntest(\"x\", () => {\n\t// TODO: write this\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x", () => {
    | ^^^^^^^^^^^^^^^^^
> 3 | 	// TODO: write this
    | ^^^^^^^^^^^^^^^^^^^^
> 4 | });
    | ^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

`;

exports[`prefer-todo > invalid(18): import {test} from 'node:test';\ntest(\"x\", (): void => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x", (): void => {});

`;

exports[`prefer-todo > invalid(18): import {test} from 'node:test';\ntest(\"x\", (): void => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x", (): void => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {test} from 'node:test';
  2 | test.todo("x");

`;

exports[`prefer-todo > invalid(19): import test from 'node:test';\ntest('placeholder', () => {} /* keep me */); 1`] = `

  1 | import test from 'node:test';
  2 | test('placeholder', () => {} /* keep me */);

`;

exports[`prefer-todo > invalid(19): import test from 'node:test';\ntest('placeholder', () => {} /* keep me */); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('placeholder', () => {} /* keep me */);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

`;

exports[`prefer-todo > invalid(2): import test from 'node:test';\ntest('t', {fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {fn() {}});

`;

exports[`prefer-todo > invalid(2): import test from 'node:test';\ntest('t', {fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {fn() {}});
    | ^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import test from 'node:test';
  2 | test.todo('t', {fn() {}});

`;

exports[`prefer-todo > invalid(20): import test from 'node:test';\ntest('placeholder', () => {\n} /* keep me */); 1`] = `

  1 | import test from 'node:test';
  2 | test('placeholder', () => {
  3 | } /* keep me */);

`;

exports[`prefer-todo > invalid(20): import test from 'node:test';\ntest('placeholder', () => {\n} /* keep me */); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('placeholder', () => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | } /* keep me */);
    | ^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

`;

exports[`prefer-todo > invalid(3): import test from 'node:test';\ntest({name: 't'}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 't'});

`;

exports[`prefer-todo > invalid(3): import test from 'node:test';\ntest({name: 't'}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 't'});
    | ^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import test from 'node:test';
  2 | test.todo({name: 't'});

`;

exports[`prefer-todo > invalid(4): import {it} from 'node:test';\nit({name: 't', fn() {}}); 1`] = `

  1 | import {it} from 'node:test';
  2 | it({name: 't', fn() {}});

`;

exports[`prefer-todo > invalid(4): import {it} from 'node:test';\nit({name: 't', fn() {}}); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it({name: 't', fn() {}});
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import {it} from 'node:test';
  2 | it.todo({name: 't', fn() {}});

`;

exports[`prefer-todo > invalid(5): import test from \"node:test\";\ntest(\"t\", (() => {}) satisfies unknown); 1`] = `

  1 | import test from "node:test";
  2 | test("t", (() => {}) satisfies unknown);

`;

exports[`prefer-todo > invalid(5): import test from \"node:test\";\ntest(\"t\", (() => {}) satisfies unknown); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("t", (() => {}) satisfies unknown);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import test from "node:test";
  2 | test.todo("t");

`;

exports[`prefer-todo > invalid(6): import test from \"node:test\";\ntest(\"t\", (() => {})!); 1`] = `

  1 | import test from "node:test";
  2 | test("t", (() => {})!);

`;

exports[`prefer-todo > invalid(6): import test from \"node:test\";\ntest(\"t\", (() => {})!); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("t", (() => {})!);
    | ^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import test from "node:test";
  2 | test.todo("t");

`;

exports[`prefer-todo > invalid(7): import test from \"node:test\";\ntest(\"t\", (() => {}) as unknown); 1`] = `

  1 | import test from "node:test";
  2 | test("t", (() => {}) as unknown);

`;

exports[`prefer-todo > invalid(7): import test from \"node:test\";\ntest(\"t\", (() => {}) as unknown); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("t", (() => {}) as unknown);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

Suggestion 1/1: Mark as \`.todo\`.:
  1 | import test from "node:test";
  2 | test.todo("t");

`;

exports[`prefer-todo > invalid(8): import test from 'node:test';\ntest('placeholder', /* keep me */ () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('placeholder', /* keep me */ () => {});

`;

exports[`prefer-todo > invalid(8): import test from 'node:test';\ntest('placeholder', /* keep me */ () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('placeholder', /* keep me */ () => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

`;

exports[`prefer-todo > invalid(9): import test from 'node:test';\ntest('placeholder', () => { /* keep me */ }); 1`] = `

  1 | import test from 'node:test';
  2 | test('placeholder', () => { /* keep me */ });

`;

exports[`prefer-todo > invalid(9): import test from 'node:test';\ntest('placeholder', () => { /* keep me */ }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('placeholder', () => { /* keep me */ });
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Empty placeholder test. Use \`.todo\` to mark it as unfinished.

`;
